Changed contact reference

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -51,7 +51,7 @@
       <li>Baking</li>
     </ul>
   <a href="hobbies.html">My Hobbies</a>
-  <a href="Contact.html">My Contact</a>
+  <a href="contact.html">My Contact</a>
 
 </body>
 
